[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/build/camp3.png" type="Texture" id=1]
[ext_resource path="res://assets/build/camp2.png" type="Texture" id=2]
[ext_resource path="res://assets/build/camp0.png" type="Texture" id=3]
[ext_resource path="res://assets/build/camp1.png" type="Texture" id=4]
[ext_resource path="res://Games/Travel/Build.gd" type="Script" id=5]
[ext_resource path="res://assets/keys/left_key.png" type="Texture" id=6]
[ext_resource path="res://assets/keys/down_key.png" type="Texture" id=7]
[ext_resource path="res://assets/keys/right_key.png" type="Texture" id=8]
[ext_resource path="res://assets/keys/up_key.png" type="Texture" id=9]

[node name="Node2D" type="Node2D"]
script = ExtResource( 5 )

[node name="camp0" type="Sprite" parent="."]
texture = ExtResource( 3 )
centered = false

[node name="camp1" type="Sprite" parent="."]
visible = false
texture = ExtResource( 4 )
centered = false

[node name="camp2" type="Sprite" parent="."]
visible = false
texture = ExtResource( 2 )
centered = false

[node name="camp3" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )
centered = false

[node name="down_key" type="Sprite" parent="."]
visible = false
position = Vector2( 562.748, 511.548 )
texture = ExtResource( 7 )

[node name="left_key" type="Sprite" parent="."]
visible = false
position = Vector2( 271.42, 346.084 )
texture = ExtResource( 6 )

[node name="right_key" type="Sprite" parent="."]
visible = false
position = Vector2( 838.519, 348.913 )
texture = ExtResource( 8 )

[node name="up_key" type="Sprite" parent="."]
visible = false
position = Vector2( 558.505, 129.71 )
texture = ExtResource( 9 )
